have image diff more or less working with color distance and percentiles