@@ -15,7 +15,7 @@ public class ImageDiffMap {
 	private BufferedImage image2;
 	private BufferedImage diffImage;
 	private Color diffColor;
-	
+	private PixelCompareResult pixelCompareResult;
 	
 	public ImageDiffMap(BufferedImage image1, BufferedImage image2,Color diffColor) {
 		super();
@@ -38,12 +38,12 @@ public class ImageDiffMap {
 	}
 		
 	public void resetData() {
-
+		this.setPixelCompareResult(new PixelCompareResult(0.95));
 	}
 	
 	public BufferedImage getScaledImage(BufferedImage toScale,double scaleFactor) {
-		int width = new Double(toScale.getWidth()*scaleFactor).intValue();
-		int height = new Double(toScale.getHeight()*scaleFactor).intValue();
+		int width = Double.valueOf(toScale.getWidth()*scaleFactor).intValue();
+		int height = Double.valueOf(toScale.getHeight()*scaleFactor).intValue();
 		Image scaledImage = toScale.getScaledInstance(
 				width,
 				height,
@@ -60,25 +60,46 @@ public class ImageDiffMap {
 	public void analyze() throws Exception
 	{
 		resetData();
-
-	
-		
 		int width1 = getImage1().getWidth(null);
 		int width2 = getImage2().getWidth(null);
 		int height1 = getImage1().getHeight(null);
 		int height2 = getImage2().getHeight(null);
-		int totalPixles = width1*height1;
-		int lastPercent = 0;
-
 		BufferedImage diffImage = new BufferedImage(width1,height1, BufferedImage.TYPE_INT_ARGB);
-		//Graphics2D bGr = diffImage.createGraphics();
-		double maxColorDistance = 0.0;
-		double maxScale = 0.0;
-		double totalScale = 0.0;
-
+		
 		if((width1 == width2) && (height1 == height2))
 		{
-						
+			for(int x = 0;x < width1;x++)
+			{
+				for(int y = 0;y < height1;y++)
+				{
+					PixelCompare pixelCompare = new PixelCompare(
+							new Point2D.Double((double)x, (double)y), 
+							getImage1().getRGB(x, y), 
+							getImage2().getRGB(x, y) );	
+					
+					getPixelCompareResult().addPixelCompare(pixelCompare);
+				}
+			}
+			getPixelCompareResult().refreshStats();
+			getPixelCompareResult().quickGraph(95);
+		
+			PixelCompareResult pcr = getPixelCompareResult();
+				
+			for(PixelCompare pc:pcr.getPixelCompareList()) pc.setBufferedImagePixel(diffImage,pcr.getPercentile(40),Color.pink);	
+				
+				
+			for(PixelCompare pc:pcr.getPixelCompareList()) pc.setBufferedImagePixel(diffImage,pcr.getPercentile(50),Color.WHITE);	
+			
+			for(PixelCompare pc:pcr.getPixelCompareList()) pc.setBufferedImagePixel(diffImage,pcr.getPercentile(65),Color.YELLOW);
+			
+			for(PixelCompare pc:pcr.getPixelCompareList()) pc.setBufferedImagePixel(diffImage,pcr.getPercentile(85),Color.GREEN);			
+			
+			for(PixelCompare pc:pcr.getPixelCompareList()) pc.setBufferedImagePixel(diffImage,pcr.getPercentile(90),Color.BLUE);			
+	
+			for(PixelCompare pc:pcr.getPixelCompareList()) pc.setBufferedImagePixel(diffImage,pcr.getPercentile(95),Color.MAGENTA);			
+
+		
+			/*
 			for(int x = 0;x < width1;x++)
 			{
 				for(int y = 0;y < height1;y++)
@@ -93,37 +114,16 @@ public class ImageDiffMap {
 					double scale = Math.pow(colorDistance/65536.0,0.5);
 					totalScale += scale;
 					if(maxScale<scale) maxScale = scale;
-
 					diffImage.setRGB(x, y,getDiffColorScale(scale).getRGB());
 				}
 			}
+*/
 		}
 		//bGr.dispose();
 		this.setDiffImage(diffImage);
-		System.out.println("maxColorDistance="+maxColorDistance);
-		System.out.println("maxScale="+maxScale);
-		System.out.println("averageScale="+totalScale/totalPixles);
 
 		
 	}
-	
-	public Color getDiffColorScale(double scale) throws Exception
-    {
-		if(scale>1.0) scale = 1.0;
-		float transparency = new Double(scale).floatValue();   
-		Color diffColor = getDiffColor();
-		if(scale==0.0) {
-			diffColor = Color.white;
-			transparency = 1.0f;
-		}
-		//transparency = 1.0f;
-
-    	Color color = new Color(
-    			(float)diffColor.getRed()/255f,
-    			(float)diffColor.getGreen()/255f,
-    			(float)diffColor.getBlue()/255f,transparency);
-    	return(color);
-    }
 		
 	public BufferedImage getImage1() {
 		return image1;
@@ -152,6 +152,14 @@ public class ImageDiffMap {
 
 	public void setDiffColor(Color diffColor) {
 		this.diffColor = diffColor;
+	}
+
+	public PixelCompareResult getPixelCompareResult() {
+		return pixelCompareResult;
+	}
+
+	public void setPixelCompareResult(PixelCompareResult pixelCompareResult) {
+		this.pixelCompareResult = pixelCompareResult;
 	}
 
 	
